force-app/main/default/objects/Student__c/fields/Approved_for_Gradution__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Gradution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved for Gradution</label>
    <type>Checkbox</type>
</CustomField>