force-app/main/default/objects/Student__c/fields/Approved_Grad__c.field-meta.xml
<CustomField>
    <fullName>Approved_Grad__c</fullName>
    <formula>IF( Approved_for_Gradution__c = true, IMAGE(&quot;https://img.icons8.com/dusk/64/000000/contract.png&quot;,
&quot;Approved Grad&quot;, 40, 40), IMAGE(&quot;https://img.icons8.com/emoji/48/000000/cross-mark-emoji.png&quot;,
&quot;Not Approved&quot;, 40, 40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Grad</label>
    <type>Text</type>
</CustomField>