force-app/main/default/objects/Student__c/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <label>Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
            <value>
                <fullName>Warning - Suspension</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Expelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>