force-app/main/default/objects/Student__c/fields/Counselor__c.field-meta.xml
<CustomField>
    <fullName>Counselor__c</fullName>
    <formula>IMAGE(
     CASE( Student_Counselor__r.Name,
      &quot;Coach Boomer&quot;, &quot;https://universalcontainers-1d0--c.visualforce.com/resource/1621800842000/Coach_Boomer?&quot;,
      &quot;Jetstream&quot;, &quot;https://universalcontainers-1d0--c.visualforce.com/resource/1621800785000/Jetstream?&quot;,
      &quot;The Commander&quot;, &quot;https://universalcontainers-1d0--c.visualforce.com/resource/1621800894000/TheCommander?&quot;,
      &quot;https://img.icons8.com/fluent/48/000000/no-image.png&quot; 
     ),&quot;Head Shot&quot;,40, 40
) +  &quot; &quot; + Student_Counselor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Counselor</label>
    <type>Text</type>
</CustomField>