force-app/main/default/objects/Student__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <label>Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9th</fullName>
                <default>true</default>
                <label>9th</label>
            </value>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>11th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>