force-app/main/default/objects/Student__c/fields/Has_Graduated__c.field-meta.xml
<CustomField>
    <fullName>Has_Graduated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox that is flipped when the student has actually graduated</description>
    <label>Graduated</label>
    <type>Checkbox</type>
</CustomField>