force-app/main/default/objects/Student__c/fields/Legacy_Student_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Student_Number__c</fullName>
    <label>Legacy Student Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>