force-app/main/default/objects/Student__c/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <label>Parent First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>