force-app/main/default/objects/Student__c/fields/Student_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Student_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Counselor</label>
    <referenceTo>Student_Counselor__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>