force-app/main/default/objects/Student__c/validationRules/NameCannotBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>NameCannotBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name is required for every Student in school.</errorMessage>
</ValidationRule>