force-app/main/default/objects/Student__c/listViews/AdminQueue_Student.listView-meta.xml
<ListView>
    <fullName>AdminQueue_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>AdminQueue</label>
    <queue>AdminQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>