force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GPA__c</columns>
    <columns>Grade_Level__c</columns>
    <columns>Student_Counselor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>