force-app/main/default/objects/Student__c/listViews/Approved_for_Graduation.listView-meta.xml
<ListView>
    <fullName>Approved_for_Graduation</fullName>
    <columns>NAME</columns>
    <columns>Grade_Level__c</columns>
    <columns>GPA__c</columns>
    <columns>Behavior__c</columns>
    <columns>Graduation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_for_Gradution__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Approved for Graduation</label>
</ListView>