force-app/main/default/objects/Student__c/listViews/X3_0_GPA_Above.listView-meta.xml
<ListView>
    <fullName>X3_0_GPA_Above</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GPA__c</field>
        <operation>greaterThan</operation>
        <value>3.49</value>
    </filters>
    <label>Honor Role</label>
</ListView>